added some style

--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-My GitHub Page
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
+    <title>Koronen @ Github</title>
+    <link href="style.css" rel="stylesheet" type="text/css" />
+  </head>
+  <body>
+    <center><h1>Koronen @ Github</h1></center>
+  </body>
+</html>
+
