Add proper frontpage

--- a/index.html
+++ b/index.html
@@ -3,6 +3,25 @@ layout: default
 title: Victor Koronen
 ---
 
-<section class="page">
-  <h1>Hello World!</h1>
-</section>
+<div class="hero-unit">
+  <h1>Victor Koronen</h1>
+  <p>Rubyist, Git addict, GitHub lover, LaTeX fan, GNU/Linux user</p>
+</div>
+
+<div class="row">
+  <div class="span4">
+    <h2>GitHub</h2>
+    <p>I do open source hacking.</p>
+    <p><a class="btn" href="https://github.com/Koronen/">GitHub profile &raquo;</a></p>
+  </div>
+  <div class="span4">
+    <h2>Facebook</h2>
+    <p>I have a social graph.</p>
+    <p><a class="btn" href="https://www.facebook.com/victor.koronen">Facebook profile &raquo;</a></p>
+  </div>
+  <div class="span4">
+    <h2>Twitter</h2>
+    <p>I tweet.</p>
+    <p><a class="btn" href="https://twitter.com/victorkoronen">Twitter profile &raquo;</a></p>
+  </div>
+</div>
