--- a/index.html
+++ b/index.html
@@ -9,19 +9,24 @@ title: Victor Koronen
 </div>
 
 <div class="row">
-  <div class="span4">
+  <div class="span3">
     <h2>GitHub</h2>
     <p>I do open source hacking.</p>
     <p><a class="btn" href="https://github.com/Koronen/">GitHub profile &raquo;</a></p>
   </div>
-  <div class="span4">
+  <div class="span3">
     <h2>Facebook</h2>
     <p>I have a social graph.</p>
     <p><a class="btn" href="https://www.facebook.com/victor.koronen">Facebook profile &raquo;</a></p>
   </div>
-  <div class="span4">
+  <div class="span3">
     <h2>Twitter</h2>
     <p>I tweet.</p>
     <p><a class="btn" href="https://twitter.com/victorkoronen">Twitter profile &raquo;</a></p>
+  </div>
+  <div class="span3">
+    <h2>LinkedIn</h2>
+    <p>I make business contacts.</p>
+    <p><a class="btn" href="http://www.linkedin.com/in/victorkoronen">LinkedIn profile &raquo;</a></p>
   </div>
 </div>
