--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <title>Victor Koronen by Koronen</title>
+    <title>Victor Koronen</title>
   </head>
 
   <body>
@@ -19,42 +19,33 @@
 
         <header>
           <h1>Victor Koronen</h1>
-          <h2>Koronen @ GitHub</h2>
+          <h2>Rubyist, Git addict, GitHub lover, LaTeX fan, GNU/Linux user</h2>
         </header>
-
-        <section id="downloads" class="clearfix">
-          <a href="https://github.com/Koronen" id="view-on-github" class="button"><span>View on GitHub</span></a>
-        </section>
 
         <hr>
 
         <section id="main_content">
-          <h3>Welcome to GitHub Pages.</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<h3>GitHub</h3>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+<p>I do open source hacking. <a href="https://github.com/Koronen/">GitHub profile &raquo;</a></p>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<h3>Facebook</h3>
 
-<h3>Designer Templates</h3>
+<p>I have a social graph. <a href="https://www.facebook.com/victor.koronen">Facebook profile &raquo;</a></p>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+<h3>Twitter</h3>
 
-<h3>Rather Drive Stick?</h3>
+<p>I occationally tweet. <a href="https://twitter.com/victorkoronen">Twitter profile &raquo;</a></p>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<h3>LinkedIn</h3>
 
-<h3>Authors and Contributors</h3>
+<p>I make business contacts. <a href="http://www.linkedin.com/in/victorkoronen">LinkedIn profile &raquo;</a></p>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<h3>Email</h3>
 
-<h3>Support or Contact</h3>
+<p>I check my inbox. <a href="mailto:koronen [no spam] kth.se">koronen [no spam] kth.se &raquo;</a></p>
 
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
         </section>
 
         <footer>
