--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="inner">
         <header>
           <h1>Victor Koronen</h1>
-          <h2>Rubyist, Git addict, GitHub lover, LaTeX fan, GNU/Linux user</h2>
+          <h2>Web developer, Rubyist, Vimmer, Git addict, GNU/Linux user</h2>
         </header>
 
         <hr>
