--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <p>I have a social graph. <a href="https://www.facebook.com/victor.koronen">Facebook profile &raquo;</a></p>
 
             <h3>Twitter</h3>
-            <p>I occationally tweet. <a href="https://twitter.com/victorkoronen">Twitter profile &raquo;</a></p>
+            <p>I occasionally tweet. <a href="https://twitter.com/victorkoronen">Twitter profile &raquo;</a></p>
 
             <h3>LinkedIn</h3>
             <p>I make business contacts. <a href="http://www.linkedin.com/in/victorkoronen">LinkedIn profile &raquo;</a></p>
