Load Tactile theme files from the theme gem
With some minor adjustments to the gem's default layout to:

* use a different `title` tag
* use a different `header` tag
* remove the whole `section#downloads`

Ref: <https://github.com/blog/2236-github-pages-now-runs-jekyll-3-2>
Ref: <https://github.com/blog/2295-new-theme-chooser-for-github-pages>

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 ---
-title: Victor Koronen
-subtitle: Web developer, Rubyist, Vimmer, Git addict, GNU/Linux user
+description: Web developer, Rubyist, Vimmer, Git addict, GNU/Linux user
 layout: default
 ---
 <h3>GitHub</h3>
