--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 ---
-description: Web developer, Rubyist, Vimmer, Git addict, GNU/Linux user
+description: Polyglot developer, Vimmer, Git addict, GNU/Linux user
 layout: default
 ---
 <h3>GitHub</h3>
-<p>I do open source hacking. <a href="https://github.com/Koronen/">GitHub profile &raquo;</a></p>
+<p>I'm on GitHub. <a href="https://github.com/Koronen/">GitHub profile &raquo;</a></p>
 
 <h3>Twitter</h3>
 <p>I occasionally tweet. <a href="https://twitter.com/victorkoronen">Twitter profile &raquo;</a></p>
@@ -15,4 +15,4 @@ layout: default
 <p>I check my inbox. <a href="mailto:www@victorkoronen.se">www@victorkoronen.se &raquo;</a></p>
 
 <h3>Blog</h3>
-<p>I also write prose. <a href="/archive">Blog archives &raquo;</a></p>
+<p>I sometimes write prose. <a href="/archive">Blog archives &raquo;</a></p>
