--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ layout: default
 <p>I make business contacts. <a href="http://www.linkedin.com/in/victorkoronen">LinkedIn profile &raquo;</a></p>
 
 <h3>Email</h3>
-<p>I check my inbox. <a href="mailto:www@victorkoronen.se">www@victorkoronen.se &raquo;</a></p>
+<p>I check my inbox. <a href="mailto:firstname@this.domain">firstname@this.domain &raquo;</a></p>
 
 <h3>Blog</h3>
 <p>I sometimes write prose. <a href="/archive">Blog archives &raquo;</a></p>
