--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-description: Polyglot developer, Vimmer, Git addict, GNU/Linux user
+description: Full-stack developer in Stockholm, Sweden
 layout: default
 ---
 <h3>GitHub</h3>
